Use /otp2 as the root path
